Fixed dot-alignment issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -726,8 +726,8 @@ body {
   top: 45vw;
   z-index: 3;
   background: #ffffff;
-  padding: 20px;
-  padding-left: 40px;
+  padding: 2vw;
+  padding-left: 3vw;
   border-left: 4px solid #3b4751; }
 
 .body-text-deploy {
@@ -758,7 +758,7 @@ body {
   position: absolute;
   top: 155vw;
   transform: rotate(-45deg);
-  min-width: 300px;
+  min-width: 25vw;
   text-align: right;
   font-weight: bold;
   color: #999; }
@@ -1044,3 +1044,21 @@ body {
     margin-top: 3vw; }
   .features-text .active {
     display: block; }
+
+.contact {
+  position: absolute;
+  background: #f5f5f5;
+  top: 340vw;
+  width: 40vw;
+  left: 45vw;
+  padding: 3vw;
+  padding-top: 5vw;
+  padding-bottom: 5vw;
+  font-size: 1vw;
+  border-radius: 1%; }
+  .contact input, .contact textarea {
+    width: 100%;
+    margin: 0.5vw;
+    border: none;
+    outline: none;
+    padding: 1vw; }
