--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -136,8 +136,8 @@
     top: 45vw;
     z-index: 3;
     background: #ffffff;
-    padding: 20px;
-    padding-left: 40px;
+    padding: 2vw;
+    padding-left: 3vw;
     border-left: 4px solid #3b4751;
 }
 .body-text-deploy {
@@ -169,7 +169,7 @@ body {
     position: absolute;
     top: 155vw;
     transform: rotate(-45deg);
-    min-width: 300px;
+    min-width: 25vw;
     text-align: right;
     font-weight: bold;
     color: #999;
@@ -469,5 +469,24 @@ body {
     }
     .active {
         display: block;
+    }
+}
+.contact {
+    position: absolute;
+    background: #f5f5f5;
+    top: 340vw;
+    width: 40vw;
+    left: 45vw;
+    padding: 3vw;
+    padding-top: 5vw;
+    padding-bottom: 5vw;
+    font-size: 1vw;
+    border-radius: 1%;
+    input, textarea {
+        width: 100%;
+        margin: 0.5vw;
+        border: none;
+        outline: none;
+        padding: 1vw;
     }
 }
